# Changelog
All notable changes to this project will be documented in this file.

## [0.3.0] - 2020-08-19
### Added
- SigninPage and RegisterPage pages.
- Authorization and registration route.
- Redux to SigninPage and RegisterPage.
- JWT token.

## [0.2.0] - 2020-08-18
### Added
- Redux to product page.
- CartPage.
- Styles fot cart page.
- Redux to cart page.
- Cookie.
- Connection to MongoDB.
- User's route.
- Environment variables.

## [0.1.0] - 2020-08-17
### Added
- Base react application.
- HomePage and ProductPage.
- Base backend.
- Nodemon configuration.
- Axios library.
- Ability to fetch server data on home page.
- Redux library.

### Fixed
- HomePage page.