@@ -3,6 +3,7 @@ const mongoose = require('mongoose')
 const data = require('./data')
 const config = require('./config')
 const userRoute = require('./routes/userRoute')
+const productRoute = require('./routes/productRoute')
 
 const PORT = config.PORT
 const app = express()
@@ -10,18 +11,20 @@ const app = express()
 app.use(express.json())
 
 app.use("/api/users", userRoute)
-app.get('/api/products', (req, res) => {
-    res.send(data)
-})
+app.use("/api/products", productRoute);
 
-app.get("/api/products/:id", (req, res) => {
-    const productId = req.params.id;
-    const product = data.find(x => x._id === productId);
-    if (product)
-      res.send(product);
-    else
-      res.status(404).send({ msg: "Product Not Found." })
-});
+// app.get('/api/products', (req, res) => {
+//     res.send(data)
+// })
+
+// app.get("/api/products/:id", (req, res) => {
+//     const productId = req.params.id;
+//     const product = data.find(x => x._id === productId);
+//     if (product)
+//       res.send(product);
+//     else
+//       res.status(404).send({ msg: "Product Not Found." })
+// });
 
 async function start()
 {
