@@ -13,4 +13,34 @@ const getToken = (user) => {
   })
 }
 
-module.exports = getToken
+const isAuth = (req, res, next) => {
+  const token = req.headers.authorization;
+
+  if (token) {
+    const onlyToken = token.slice(7, token.length);
+    jwt.verify(onlyToken, config.JWT_SECRET, (err, decode) => {
+      if (err) {
+        return res.status(401).send({ msg: 'Invalid Token' });
+      }
+      req.user = decode;
+      next();
+      return
+    });
+  } else {
+    return res.status(401).send({ msg: "Token is not supplied." });
+  }
+}
+
+const isAdmin = (req, res, next) => {
+  console.log(req.user)
+  if (req.user && req.user.isAdmin) {
+    return next();
+  }
+  return res.status(401).send({ msg: 'Admin Token is not valid.' })
+}
+
+module.exports = {
+  getToken,
+  isAuth,
+  isAdmin
+}
