@@ -1,7 +1,11 @@
+import axios from 'axios';
 import { PRODUCT_LIST_REQUEST, PRODUCT_LIST_SUCCESS,
          PRODUCT_LIST_FAIL, PRODUCT_DETAILS_REQUEST,
-         PRODUCT_DETAILS_SUCCESS, PRODUCT_DETAILS_FAIL} from "../types/productConstants"
-import axios from 'axios';
+         PRODUCT_DETAILS_SUCCESS, PRODUCT_DETAILS_FAIL,
+         PRODUCT_SAVE_REQUEST, PRODUCT_SAVE_SUCCESS, 
+         PRODUCT_SAVE_FAIL, PRODUCT_DELETE_REQUEST,
+         PRODUCT_DELETE_SUCCESS, PRODUCT_DELETE_FAIL} from "../types/productConstants"
+
 const listProducts = () => async (dispatch) => {
   try {
 
@@ -15,10 +19,36 @@ const listProducts = () => async (dispatch) => {
   }
 }
 
+const saveProduct = (product) => async (dispatch, getState) => {
+  try {
+    dispatch({ type: PRODUCT_SAVE_REQUEST, payload: product });
+    const { userSignin: { userInfo } } = getState();
+    if (!product._id) {
+      const { data } = await axios.post('/api/products', product, {
+        headers: {
+          'Authorization': `Bearer ${userInfo.token}`
+        }
+      });
+      dispatch({ type: PRODUCT_SAVE_SUCCESS, payload: data });
+    } else {
+      const { data } = await axios.put(`/api/products/${product._id}`, product, {
+        headers: {
+          'Authorization': `Bearer ${userInfo.token}`
+        }
+      });
+      dispatch({ type: PRODUCT_SAVE_SUCCESS, payload: data });
+    }
+
+  } catch (error) {
+
+    dispatch({ type: PRODUCT_SAVE_FAIL, payload: error.message });
+  }
+}
+
 const detailsProduct = (productId) => async (dispatch) => {
   try {
     dispatch({ type: PRODUCT_DETAILS_REQUEST, payload: productId });
-    const { data } = await axios.get("/api/products/" + productId);
+    const { data } = await axios.get(`/api/products/${productId}`);
     dispatch({ type: PRODUCT_DETAILS_SUCCESS, payload: data });
   } catch (error) {
     dispatch({ type: PRODUCT_DETAILS_FAIL, payload: error.message });
@@ -26,5 +56,21 @@ const detailsProduct = (productId) => async (dispatch) => {
   }
 }
 
+const deleteProdcut = (productId) => async (dispatch, getState) => {
+  try {
+    const { userSignin: { userInfo } } = getState();
+    dispatch({ type: PRODUCT_DELETE_REQUEST, payload: productId });
+    const { data } = await axios.delete(`/api/products/${productId}`, {
+      headers: {
+        Authorization: 'Bearer ' + userInfo.token
+      }
+    });
+    dispatch({ type: PRODUCT_DELETE_SUCCESS, payload: data, success: true });
+  } catch (error) {
+    dispatch({ type: PRODUCT_DELETE_FAIL, payload: error.message });
 
-export { listProducts, detailsProduct}
+  }
+}
+
+
+export { listProducts, detailsProduct, saveProduct, deleteProdcut}
