@@ -1,5 +1,6 @@
 import { combineReducers } from "redux";
-import { productListReducer, productDetailsReducer} from "./productReducers";
+import { productListReducer, productDetailsReducer,
+    productSaveReducer, productDeleteReducer} from "./productReducers";
 import { cartReducer } from "./cartReducers";
 import { userSigninReducer, userRegisterReducer } from "./userReducers";
 
@@ -8,5 +9,7 @@ export const rootReducer = combineReducers({
     productDetails: productDetailsReducer,
     cart: cartReducer,
     userSignin: userSigninReducer,
-    userRegister: userRegisterReducer
+    userRegister: userRegisterReducer,
+    productSave: productSaveReducer,
+    productDelete: productDeleteReducer
 })
